--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -22,7 +22,7 @@ block content
         div.pure-u-1.pure-u-md-3-4
             | The case is ready to send to the prison case admin
 
-        div.pure-u-1.inlineButtons
+        div.pure-u-1.inlineButtons.midMarginTop
 
             if licenceStatus.decisions.optedOut
                 form#licenceDetailsForm(method='POST', action='/hdc/send/optedOut/' + bookingId)
