Add some IDs for feature tests

--- a/server/views/bassReferral/bassAreaCheck.pug
+++ b/server/views/bassReferral/bassAreaCheck.pug
@@ -18,10 +18,10 @@ block content
             div.paddingTop.paddingBottom
                 div.pure-u-1-2
                     div Proposed town
-                    div.bold #{bassRequest.proposedTown}
+                    div.bold#proposedTown #{bassRequest.proposedTown}
                 div.pure-u-1-2
                     div Proposed county or borough
-                    div.bold #{bassRequest.proposedCounty}
+                    div.bold#proposedCounty #{bassRequest.proposedCounty}
         div.pure-u-1.pure-u-md-1-2
 
         hr
