--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -20,10 +20,10 @@ block content
             div.paddingTop.paddingBottom
                 div.pure-u-1-2
                     div Town
-                    div.bold #{bassRequest.proposedTown}
+                    div.bold#proposedTown #{bassRequest.proposedTown}
                 div.pure-u-1-2
                     div County
-                    div.bold #{bassRequest.proposedCounty}
+                    div.bold#proposedCounty #{bassRequest.proposedCounty}
         div.pure-u-1-2
 
         div.pure-u-1-2.smallPaddingTop
