--- a/server/views/review/includes/bassArea.pug
+++ b/server/views/review/includes/bassArea.pug
@@ -7,22 +7,22 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
 
     div.pure-u-1.pure-u-md-1-2
         span Proposed county
-    div.pure-u-1.pure-u-md-1-2#proposedCounty
+    div.pure-u-1.pure-u-md-1-2
         +itemAndError(bassRequest.proposedCounty, errors.proposedCounty, "proposedCounty")
 
     div.pure-u-1.pure-u-md-1-2
         span Proposed town
-    div.pure-u-1.pure-u-md-1-2#proposedTown
+    div.pure-u-1.pure-u-md-1-2
         +itemAndError(bassRequest.proposedTown, errors.proposedTown, "proposedTown")
 
     div.pure-u-1.pure-u-md-1-2
         span Is the BASS area suitable?
-    div.pure-u-1.pure-u-md-1-2#bassAreaDetails
+    div.pure-u-1.pure-u-md-1-2
         +itemAndError(bassAreaCheck.bassAreaSuitable, errors.bassAreaSuitable, "suitableArea")
 
     if bassAreaCheck.bassAreaSuitable === 'No'
         div.pure-u-1.pure-u-md-1-2
             span Reasons
-        div.pure-u-1.pure-u-md-1-2#bassReasonDetails
+        div.pure-u-1.pure-u-md-1-2
             +itemAndError(bassAreaCheck.bassAreaReason, errors.bassAreaReason, "areaReason")
 
