--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -76,4 +76,11 @@ block content
                                         input#homeVisitConductedNo(type="radio" checked=address.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
                                         label(for="homeVisitConductedNo") No
 
+                    div.form-group
+                        label(for='addressReviewComments') Provide details (optional)
+                            textarea(name='addressReviewComments' id='addressReviewComments' class='form-control' rows='5' aria-label="Provide details")
+                                if address.addressReviewComments
+                                    | #{address.addressReviewComments}
+
+
             include ../includes/formSubmit
