--- a/server/views/taskList/tasks/informBassTask.pug
+++ b/server/views/taskList/tasks/informBassTask.pug
@@ -1,11 +1,11 @@
 div.largeMarginBottom
 
-    h2.heading-medium Inform the offender
+    h2.heading-medium Submit BASS request
 
     div.pure-g
 
         div.pure-u-1.pure-u-md-3-4
-            | You should now tell the offender using the relevant form
+            | You should now submit the request to BASS using the relevant form
 
         div.pure-u-1.pure-u-md-1-4.center
             +taskButton("/caseList/", 'Back to case list', 'grey')
