Make heading text link to caselist

--- a/server/views/global-header.pug
+++ b/server/views/global-header.pug
@@ -6,7 +6,8 @@ header(role="banner", id="global-header", class="with-proposition")
                     a(href="/", title="Go to the homepage", id="logo", class="content hmppslogo")
                         | HMPPS
                     span |
-                    h1.heading-medium.noMargin Home detention curfew (HDC)
+                    h1.heading-medium.noMargin
+                        a(href="/", title="Go to the homepage") Home detention curfew (HDC)
 
             if user
                 div.pure-u-1.pure-u-md-1-2
