--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -1,6 +1,11 @@
 #global-header {
     color: white;
 
+    a {
+        color: white;
+        text-decoration: none;
+    }
+
     .header-wrapper {
         max-width: 1170px;
         padding-top: 0px;
@@ -29,8 +34,6 @@
         margin-top: 3px;
         padding-left: 65px;
         height: 50px;
-
-
     }
 
     #header-user {
@@ -38,9 +41,5 @@
         color: $white;
         background-color: $govuk-blue;
         padding: 15px;
-
-        a {
-            color: white
-        }
     }
 }
