--- a/server/views/taskList/tasks/curfewAddressTask.pug
+++ b/server/views/taskList/tasks/curfewAddressTask.pug
@@ -38,5 +38,7 @@ div.paddingBottom
                     else
                         +viewEdit(reviewPath)
 
+                else if user.role === 'CA' && licenceStatus.stage === 'PROCESSING_CA'
+                    +change(reviewPath)
                 else
                     +view(reviewPath)
