--- a/server/views/taskList/tasks/finalChecksTask.pug
+++ b/server/views/taskList/tasks/finalChecksTask.pug
@@ -1,5 +1,5 @@
 div.paddingBottom
-    h2.heading-medium Final checks
+    h2.heading-medium Review case
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
