--- a/server/views/taskList/tasks/postponementTask.pug
+++ b/server/views/taskList/tasks/postponementTask.pug
@@ -1,16 +1,14 @@
 div.paddingBottom
-    h2.heading-medium Postponement / refuse HDC
+    h2.heading-medium Postpone or refuse
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
-            .pure-g
-                .pure-u-1.pure-u-3-5
-                    if licenceStatus.decisions.postponed
-                        | HDC application postponed
-                    else if licenceStatus.decisions.confiscationOrder
-                        | Use this to indicate that the process is postponed if a confiscation order is in place
-                    else
-                        | Use this to indicate that the process is postponed while any risk management planning actions remain outstanding
+            if licenceStatus.decisions.postponed
+                | HDC application postponed
+            else if licenceStatus.decisions.confiscationOrder
+                | Use this to indicate that the process is postponed if a confiscation order is in place
+            else
+                | Postpone the case if you're waiting for information on risk management
 
         div.pure-u-1.pure-u-md-1-4.center
             p.namedAnchor
