More content changes

--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -12,7 +12,7 @@ block content
         include ../includes/personalDetailsSummary
         +errorBannerWithDetail(errorObject)
 
-        h2.heading-large BASS request decision
+        h2.heading-large BASS address
 
         div.pure-u-1-2
             | The responsible officer has approved the following BASS area:
