--- a/server/views/taskList/tasks/bassOfferTask.pug
+++ b/server/views/taskList/tasks/bassOfferTask.pug
@@ -29,7 +29,7 @@ div.paddingBottom
 
             else if licenceStatus.tasks.bassAreaCheck === 'DONE'
                 if licenceStatus.decisions.bassAreaSuitable
-                    | BASS area approved
+                    | Not completed
                 else
                     | BASS referral requested
 
