--- a/server/views/taskList/tasks/informBassTask.pug
+++ b/server/views/taskList/tasks/informBassTask.pug
@@ -5,7 +5,7 @@ div.largeMarginBottom
     div.pure-g
 
         div.pure-u-1.pure-u-md-3-4
-            | You should now submit the request to BASS using the relevant form
+            | The BASS area has been approved by the responsible officer. You should now submit the request to BASS
 
         div.pure-u-1.pure-u-md-1-4.center
             +taskButton("/caseList/", 'Back to case list', 'grey')
