--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -3,6 +3,7 @@ extends ../layout
 block content
 
     -var bassOffer = data && data.bassReferral && data.bassReferral.bassOffer || {}
+    -var bassAddress = bassOffer && bassAddress || {}
     -var bassRequest = data && data.bassReferral && data.bassReferral.bassRequest || {}
 
     div.pure-g.pure-u-1
@@ -42,22 +43,22 @@ block content
                 div.pure-u-1.pure-u-md-1-3.paddingTop
                     span Bass offer area
                 div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferArea
-                    if bassOffer.bassAddress.bassArea
-                        div.bold #{bassOffer.bassAddress.bassArea}
+                    if bassAddress.bassArea
+                        div.bold #{bassAddress.bassArea}
 
                 div.pure-u-1.pure-u-md-1-3.paddingTop
                     span Bass offer address
                 div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferAddress
-                    if bassOffer.bassAddress.addressLine1
-                        div.bold #{bassOffer.bassAddress.addressLine1}
-                    if bassOffer.bassAddress.addressLine2
-                        div.bold #{bassOffer.bassAddress.addressLine2}
-                    if bassOffer.bassAddress.addressTown
-                        div.bold #{bassOffer.bassAddress.addressTown}
-                    if bassOffer.bassAddress.postCode
-                        div.bold #{bassOffer.bassAddress.postCode}
-                    if bassOffer.bassAddress.telephone
-                        div.bold #{bassOffer.bassAddress.telephone}
+                    if bassAddress.addressLine1
+                        div.bold #{bassAddress.addressLine1}
+                    if bassAddress.addressLine2
+                        div.bold #{bassAddress.addressLine2}
+                    if bassAddress.addressTown
+                        div.bold #{bassAddress.addressTown}
+                    if bassAddress.postCode
+                        div.bold #{bassAddress.postCode}
+                    if bassAddress.telephone
+                        div.bold #{bassAddress.telephone}
 
 
 
