--- a/server/views/admin/users/roUserDetails.pug
+++ b/server/views/admin/users/roUserDetails.pug
@@ -69,8 +69,15 @@ block content
             div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
                     div.form-group
+                        label.form-label(for="orgEmail") Organisation Email
+                        input#orgEmail.form-control(name="orgEmail" type="text" value=inputs.orgEmail)
+
+            div.pure-u-1.pure-u-md-2-5
+                div.pure-u-1.pure-u-md-4-5
+                    div.form-group
                         label.form-label(for="telephone") Telephone
                         input#telephone.form-control(name="telephone" type="text" value=inputs.telephone)
+            div.pure-u-1.pure-u-md-2-5
 
             div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
