split up date from licence to show on form if field has splitDate config

--- a/server/views/reporting/reportingDate.pug
+++ b/server/views/reporting/reportingDate.pug
@@ -25,16 +25,15 @@ block content
                         div.form-date
                             div.form-group.form-group-day
                                 label.form-label(for="reportingDay") Day
-                                input.form-control#reportingDay(name="reportingDay" type="number" pattern="[0-9]*")
+                                input.form-control#reportingDay(name="reportingDay" type="number" pattern="[0-9]*" value=data.reportingDay)
 
                             div.form-group.form-group-month
                                 label.form-label(for="reportingMonth") Month
-                                input.form-control#reportingMonth(name="reportingMonth" type="number" pattern="[0-9]*")
+                                input.form-control#reportingMonth(name="reportingMonth" type="number" pattern="[0-9]*" value=data.reportingMonth)
 
                             div.form-group.form-group-year
                                 label.form-label(for="reportingYear") Year
-                                input.form-control#reportingYear(name="reportingYear" type="number" pattern="[0-9]*")
-
+                                input.form-control#reportingYear(name="reportingYear" type="number" pattern="[0-9]*" value=data.reportingYear)
 
                 div.form-group
                     label.form-label(for="reportingTime") Time
