Add caselist return

--- a/server/views/pdf/createLicenceTaskList.pug
+++ b/server/views/pdf/createLicenceTaskList.pug
@@ -25,4 +25,7 @@ block content
         div.taskListItem.borderBottom
             include tasks/createLicenceTask
 
+        div.paddingTop
+            include ../includes/caseListReturn
+
 
