show time to hdced in days up to 14 days

--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -21,7 +21,7 @@ table#hdcEligiblePrisoners.caSortcolumns.largeMarginBottom
                         if prisoner.offenderNo
                             | #{prisoner.offenderNo}
 
-                    td.hdced.hideMobile
+                    td.hdced
                         div.searchable
                             | #{prisoner.sentenceDetail.homeDetentionCurfewEligibilityDate}
 
