--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -25,7 +25,7 @@ table#hdcEligiblePrisoners.caSortcolumns.largeMarginBottom
                         div.searchable
                             | #{prisoner.sentenceDetail.homeDetentionCurfewEligibilityDate}
 
-                    td.hdced.hideMobile
+                    td.timeToHdced.hideMobile
                         div(class=prisoner.due.overdue ? "alert bold-small searchable" : "searchable")
                             | #{prisoner.due.text}
 
