--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -1,6 +1,16 @@
 doctype html
 html(lang="en")
     head
+        if googleAnalyticsKey
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            script(async src="https://www.googletagmanager.com/gtag/js?id="+googleAnalyticsKey)
+            script.
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+
+                gtag('config', #{googleAnalyticsKey});
+
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         meta(property="og:image" content="/public/images/opengraph-image.png?0.19.2")
