--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -53,7 +53,6 @@ $path: "/public/images/";
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    padding-top: 50px;
 }
 
 .l-box {
@@ -146,6 +145,10 @@ $path: "/public/images/";
     .change-details {margin-top: 2.5em;}
     .taskListSingleLineItem .buttonContainer{margin-top: 2.3em;}
     .sm-padTop55 {padding-top: 55px};
+    #sm-contactUs {
+        position: relative;
+        top: 90px;
+    }
 }
 
 .midPaddingTopBottom {
