--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -1,15 +1,15 @@
 doctype html
 html(lang="en")
     head
-        if googleAnalyticsKey
-            <!-- Global site tag (gtag.js) - Google Analytics -->
-            script(async src="https://www.googletagmanager.com/gtag/js?id="+googleAnalyticsKey)
+        if tagManagerKey
+            <!-- Google Tag Manager -->
             script.
-                window.dataLayer = window.dataLayer || [];
-                function gtag(){dataLayer.push(arguments);}
-                gtag('js', new Date());
-
-                gtag('config', '#{googleAnalyticsKey}');
+                (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';j.async=true;j.src=
+                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+                })(window,document,'script','dataLayer','#{tagManagerKey}');
+            <!-- End Google Tag Manager -->
 
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
@@ -44,6 +44,11 @@ html(lang="en")
         <!--[if lt IE 9]><script src="/public/javascripts/ie.js?0.19.2"></script><!--<![endif]-->
 
     body
+        if tagManagerKey
+            <!-- Google Tag Manager (noscript) -->
+            noscript
+                iframe(src="https://www.googletagmanager.com/ns.html?id="+tagManagerKey height="0" width="0" style="display:none;visibility:hidden")
+            <!-- End Google Tag Manager (noscript) -->
         script.
             document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
 
