--- a/server/views/pdf/tasks/createLicenceTask.pug
+++ b/server/views/pdf/tasks/createLicenceTask.pug
@@ -7,7 +7,7 @@ div.paddingBottom
         div.pure-u-1.pure-u-md-3-4
             h2.heading-medium Create #{versionInfo.templateLabel}
         div.pure-u-1.pure-u-md-1-4.center.largeMarginTop
-            a(href="/hdc/pdf/select/" + bookingId) Change template
+            a(href="/hdc/pdf/select/" + bookingId) Change licence type
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
@@ -34,5 +34,4 @@ div.paddingBottom
             a#createPdf.taskListAction.center.button(href="/hdc/pdf/create/" + templateName + "/" + bookingId
             role="button"
             target="_blank"
-            onClick="setTimeout(function(){javascript:window.location.reload()}, 200)") Continue
-
+            onClick="setTimeout(function(){javascript:window.location.reload()}, 200)") Create licence
