--- a/server/views/taskList/includes/startContinueChangeMultiButton.pug
+++ b/server/views/taskList/includes/startContinueChangeMultiButton.pug
@@ -10,6 +10,6 @@ mixin startContinueChangeMulti(tasks, path, id)
         a(href=path, id=id) Change
 
     else
-        a.taskListAction.center.button(class='button-secondary', href=path, id=id) Continue
+        a.taskListAction.center.button(href=path, id=id) Continue
 
 
