--- a/server/views/user/admin.pug
+++ b/server/views/user/admin.pug
@@ -1,27 +1,49 @@
 extends ../layout
 
 block content
-    div.notice-container.midMarginBottom
-        div.notice.center
-            strong.bold-small #{user.firstName} #{user.lastName}, #{user.role}
+
     div.pure-g
-        .pure-u-1
+        div.pure-u-1
             include ../includes/back
 
-            h2.heading-large
-                | Select a role from the list
+        header.pure-u-1
+            h1.heading-medium
+                | User details
 
-        .pure-u-1.pure-u-sm-2-5
-            form(method="post")
-                input(type="hidden" name="_csrf" value=csrfToken)
-                input(type="hidden" name="bookingId" value=bookingId || '')
-                div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
-                    div.form-group.largePaddingBottom
+        div.pure-u-1.pure-u-sm-2-5.largePaddingBottom
+            table
+                tbody
+                    tr
+                        td Name
+                        td #{user.firstName} #{user.lastName}
+                    tr
+                        td Role
+                        td #{user.role}
+
+                    if user.activeCaseLoad
+                        tr
+                            td Active case load
+                            td #{user.activeCaseLoad.description}
+
+    if allRoles.length > 1
+        div.pure-g.borderTop
+
+            h2.pure-u-1.heading-medium
+                | Edit settings
+
+            div.pure-u-1.pure-u-sm-2-5
+
+                form(method="post")
+                    input(type="hidden" name="_csrf" value=csrfToken)
+                    input(type="hidden" name="bookingId" value=bookingId || '')
+
+                    div.form-group
+                        label.form-label(for="selectRole") Select role
                         select.form-control#selectRole(name="role")
                             option(value="" disabled selected) -- select --
                             for role in allRoles
                                 option(value=role, selected=role === user.role) #{role}
 
-                    div.pure-u-1.inlineButtons.paddingBottom.smallPaddingTop
+                    div.pure-u-1.inlineButtons.paddingBottom.largeMarginTop
                         input#continueBtn.requiredButton.button.midMarginBottom(type="submit" value="Submit")
                         a#backBtn.requiredButton.button.button-secondary(href="/caselist" role="button") Back to case list
