--- a/server/views/global-header.pug
+++ b/server/views/global-header.pug
@@ -11,8 +11,10 @@ header(role="banner", id="global-header", class="with-proposition")
 
             if user
                 div.pure-u-1.pure-u-md-1-2
-                    div#header-user
-                        span.bold #{user.firstName} #{user.lastName} &nbsp;&nbsp;|&nbsp;&nbsp;
+                    div#header-user.u-pad10.sm-pad15
+                        div.u-padRight10.sm-padRight30.padLeft15.bold.borderRight
+                            a(href="/user" title="Sign out" aria-label="Visit user admin page") #{user.firstName} #{user.lastName}
                         if user.activeCaseLoad
-                            span.bold #{user.activeCaseLoad.description} &nbsp;&nbsp;|&nbsp;&nbsp;
-                        a(href="/logout" title="Sign out" aria-label="Sign out of HDC") Sign out
+                            div.u-padRightLeft10.sm-padLeftRight30.bold.borderRight #{user.activeCaseLoad.description}
+                        div.u-padLeft10.sm-padLeft30.padRight15
+                            a(href="/logout" title="Sign out" aria-label="Sign out of HDC") Sign out
