added caseload switching capability

--- a/server/views/global-header.pug
+++ b/server/views/global-header.pug
@@ -13,8 +13,9 @@ header(role="banner", id="global-header", class="with-proposition")
                 div.pure-u-1.pure-u-md-1-2
                     div#header-user.u-pad10.sm-pad15
                         div.u-padRight10.sm-padRight30.padLeft15.bold.borderRight
-                            a(href="/user" title="Sign out" aria-label="Visit user admin page") #{user.firstName} #{user.lastName}
+                            a(href="/user" title="User page" aria-label="Visit user admin page") #{user.firstName} #{user.lastName}
                         if user.activeCaseLoad
-                            div.u-padRightLeft10.sm-padLeftRight30.bold.borderRight #{user.activeCaseLoad.description}
+                            div.u-padRightLeft10.sm-padLeftRight30.bold.borderRight
+                                a(href="/user" title="User page" aria-label="Visit user admin page") #{user.activeCaseLoad.description}
                         div.u-padLeft10.sm-padLeft30.padRight15
                             a(href="/logout" title="Sign out" aria-label="Sign out of HDC") Sign out
