--- a/server/views/bassReferral/bassRequest.pug
+++ b/server/views/bassReferral/bassRequest.pug
@@ -1,21 +1,14 @@
 extends ../formTemplates/formTemplate
 
 block question
-    | Has the offender requested a BASS referral?
+    | Requested BASS area
 
 block formItems
-    div.form-group.inline.smallPaddingTop
 
-        -var bassRequest = data && data.bassRequest || {}
+    -var bassRequest = data && data.bassRequest || {}
+    input(type='hidden' name='bassRequested' value=bassRequest.bassRequested)
 
-        div.multiple-choice(data-target="bassFollowUps")
-            input#yes(type="radio" checked=bassRequest.bassRequested === 'Yes' name="bassRequested" value="Yes")
-            label(for="yes") Yes
-        div.multiple-choice
-            input#no(type="radio" checked=bassRequest.bassRequested === 'No' name="bassRequested" value="No")
-            label(for="no") No
-
-    div#bassFollowUps.pure-u-1.pure-u-md-1-2(class=errorObject.proposedTown || errorObject.proposedCounty ? 'form-group-error' : 'panel panel-border-narrow js-hidden')
+    div#bassFollowUps.pure-u-1.pure-u-md-1-2
         if errorObject.proposedTown
             span.error-message #{errorObject.proposedTown}
         div.form-group
