added pages for active and inactive on caselist. Implemented filtering of cases

--- a/server/views/taskList/tasks/informBassTask.pug
+++ b/server/views/taskList/tasks/informBassTask.pug
@@ -8,4 +8,4 @@ div.largeMarginBottom
             | The BASS area has been approved by the responsible officer. You should now submit the request to BASS
 
         div.pure-u-1.pure-u-md-1-4.center
-            +taskButton("/caseList/", 'Back to case list', 'grey')
+            +taskButton("/caseList/active", 'Back to case list', 'grey')
