--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -10,8 +10,15 @@ block content
             h2.heading-medium Case list
 
             div.pure-g
-                div.pure-u-1.pure-u-md-2-5.form-group
+                div.pure-u-1.pure-u-md-1-2.form-group
                     input.front-end-control.form-control(type="text" id="caseListFilter" placeholder="Search your case list" title="Filter the case list by text content")
+
+                div#tabBar.pure-u-1.form-group.center
+                    ul
+                        li(class=tab === 'active' ? 'selected' : undefined)
+                            a(href="/caselist/active") Active
+                        li(class=tab === 'inactive' ? 'selected' : undefined)
+                            a(href="/caselist/inactive") Inactive
 
             if user.role === 'CA'
                 include ./CATable
