changed position of caselist search box

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -89,6 +89,10 @@ $path: "/public/images/";
     padding-bottom: 50px;
 }
 
+.xlargePaddingTop {
+    padding-top: 65px;
+}
+
 .smallPaddingBottom {
     padding-bottom: 10px;
 }
