--- a/server/views/pdf/tasks/createLicenceTask.pug
+++ b/server/views/pdf/tasks/createLicenceTask.pug
@@ -16,6 +16,8 @@ div.paddingBottom
                 if versionInfo.isNewTemplate
                     | ,
                     span.bold  #{versionInfo.templateLabel}
+            else
+                | Not complete
 
             if versionInfo.lastVersion
                 p
@@ -30,8 +32,9 @@ div.paddingBottom
                             | #{versionInfo.lastTemplateLabel}
                     li Version #{versionInfo.lastVersion.version}
 
-        div.pure-u-1.pure-u-md-1-4.center
-            a#createPdf.taskListAction.center.button(href="/hdc/pdf/create/" + templateName + "/" + bookingId
-            role="button"
-            target="_blank"
-            onClick="setTimeout(function(){javascript:window.location.reload()}, 200)") Create licence
+        if canPrint
+            div.pure-u-1.pure-u-md-1-4.center
+                a#createPdf.taskListAction.center.button(href="/hdc/pdf/create/" + templateName + "/" + bookingId
+                role="button"
+                target="_blank"
+                onClick="setTimeout(function(){javascript:window.location.reload()}, 200)") Create licence
