--- a/server/views/pdf/tasks/firstNightTask.pug
+++ b/server/views/pdf/tasks/firstNightTask.pug
@@ -3,7 +3,7 @@
 - var buttonState = incomplete ? 'UNSTARTED' : 'DONE'
 
 div.paddingBottom
-    h2.heading-medium First Night Curfew Hours
+    h2.heading-medium First night curfew hours
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4#firstNightTaskStatus
