--- a/server/views/taskList/tasks/informOffenderTask.pug
+++ b/server/views/taskList/tasks/informOffenderTask.pug
@@ -5,7 +5,7 @@ div.largeMarginBottom
     div.pure-g
 
         div.pure-u-1.pure-u-md-3-4
-            | You should now tell the offender using the relevant form
+            | You should now tell the offender using the relevant HDC form from NOMIS
 
         div.pure-u-1.pure-u-md-1-4.center
             +taskButton("/caseList/active", 'Back to case list', 'grey')
